 * Dlink DES 3550 switch (Thanks to Olivier Roch Vilato)
 * Dlink DGS 3200 switch
 * HP ProCurve 5400 Series
 * ExtremeNetworks Summit now supports MAC Authentication and 802.1X

New Features
 * Basic WISPR support improves iPod/iPhone/iPad usability (#815)

Enhancements
 * Performance improvement for RADIUS based requests in environments with large
   conf/switches.conf files
 * Nortel module now warns in the logs about a common stacking Nortel problem
 * New DHCP fingerprint for Cisco/Linksys, Aruba, 3Com switch, HTC Android, 
   Polycom, Konica Minolta MFP's and HP Printers
 * Warning avoidance
 * New FreeRADIUS and pfdhcplistener watchdog scripts in addons/watchdog/
 * Admin Guide: cleanup of the MySQL optimization, more logging in Samba config
 * New binding allowing to offer different captive portal for mobile devices
 * Admin Guide's FAQ and Troubleshooting sections has been migrated to the 
   PacketFence website

Bug fixes
 * Re-introduced MAC Authentication and 802.1X support in Cisco 3560, 3750
 * Fixed expire deadline automatic un-registration (#865)
 * Updated Admin Guide to reflect proper method calls for custom VLAN assignment
 * Fixed Nortel switches problems on some models / firmwares
 * Fixed installer errors (#1217)
 * Increased PHP memory to PHP's default: 128M. Mitigates #962.

Translations
 * Updated French (fr) translation (Thanks to Vincent Blut)

--------------------------------------------------------------------------------
Version 2.2.0 released on 2011-05-03

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X
- Dlink DGS 3100 Switches

New features
- Captive Portal network access detection is more accurate and way faster
  (javascript-based)
- Easier integration and configuration of FreeRADIUS 2.x using our new
  packetfence-freeradius2 RPM
- Apache configuration is automatically adjusted on startup based on system 